--- a/perfil.css
+++ b/perfil.css
@@ -6,7 +6,7 @@ body {
 }
 
 .profile-container {
-  width: 100%; /* Ocupa todo el ancho disponible */
+  width: 100%; 
   max-width: 400px;
   margin: 50px auto;
   background: linear-gradient(to bottom, #9b3434 50%, #fff 50%);
@@ -15,27 +15,27 @@ body {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
-  align-items: flex-start; /* Alinea los elementos a la izquierda */
+  align-items: flex-start;
 }
 
 .profile-label {
   font-weight: bold;
-  margin-bottom: 20px; /* Aumenta el espacio entre los elementos */
-  color: #fbfbfb; /* Letras rojas */
-  text-align: left; /* Alinea el texto a la izquierda */
+  margin-bottom: 20px; 
+  color: #fbfbfb; 
+  text-align: left; 
 }
 
 .profile-image {
-  width: 100px; /* Aumenta el tamaño de la imagen */
-  height: 100px; /* Aumenta el tamaño de la imagen */
+  width: 100px; 
+  height: 100px; 
   border-radius: 50%;
   object-fit: cover;
-  margin-bottom: 20px; /* Aumenta el espacio entre la imagen y el texto */
-  margin-right: 20px; /* Mueve la imagen a la derecha */
+  margin-bottom: 20px; 
+  margin-right: 20px; /
 }
 
 .profile-status {
-  margin-bottom: 20px; /* Aumenta el espacio entre la imagen y el texto */
+  margin-bottom: 20px; 
 }
 
 .profile-buttons {
@@ -44,24 +44,23 @@ body {
 }
 
 .profile-button {
-  margin-bottom: 20px; /* Aumenta el espacio entre los botones */
-  padding: 10px; /* Aumenta el tamaño de los botones */
-  background-color: #fff; /* Fondo blanco */
-  color: #9b3434; /* Letras rojas */
-  border: 1px solid #9b3434; /* Contorno rojo */
-  border-radius: 8px; /* Aumenta el radio de los bordes */
+  margin-bottom: 20px; 
+  padding: 10px; 
+  background-color: #fff; 
+  color: #9b3434; 
+  border: 1px solid #9b3434; 
+  border-radius: 8px;  
   cursor: pointer;
-  font-size: 18px; /* Aumenta el tamaño de la letra */
+  font-size: 18px; 
 }
 
 .profile-button:hover {
-  background-color: #9b3434; /* Fondo rojo al pasar el mouse */
-  color: #fff; /* Letras blancas al pasar el mouse */
+  background-color: #9b3434;
+  color: #fff;
 }
 
-/* Media query para dispositivos con un ancho máximo de 600px */
 @media (max-width: 600px) {
   .profile-label {
-    text-align: left; /* Alinea el texto a la izquierda en dispositivos pequeños */
+    text-align: left; 
   }
 }
