--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,17 @@
 :root {
-  
+  text-rendering: optimizeLegibility;
 }
 
 body {
   margin: 0;
   display: flex;
   place-items: center;
-  /* min-width: 320px;
-  min-height: 100vh; */
+  min-width: 320px;
+  min-height: 100vh;
 }
 
+button {
+  border: 1px solid transparent;
+  font-family: Poppins;
+  
+}
