--- a/src/views/ladingPage/card1.css
+++ b/src/views/ladingPage/card1.css
@@ -12,7 +12,7 @@ img {
   border-radius: 30px;
 }
 
-.titulo1{
+.titulo1 {
   color: rgba(255, 255, 255, 1);
   position: absolute;
   width: 228px;
@@ -38,4 +38,14 @@ img {
   line-height: 36px;
   letter-spacing: 0em;
   text-align: center;
+}
+
+.searchButtons {
+  position: relative;
+  top: -210px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  flex-direction: column;
+  gap: 15px;
 }
