--- a/src/styles/Boton.css
+++ b/src/styles/Boton.css
@@ -7,7 +7,13 @@
   background: #fff;
   display: flex;
   align-items: center;
+  justify-content: space-around;
+  margin: 20px 35px;
 }
+.seccion {
+  margin-top: 50px;
+}
+
 .mujer {
   width: 25px;
   height: 25px;
