--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
   flex-shrink: 0;
   background: #c12528;
   position: relative;
-  top: -162px;
+  top: -88px;
 }
 .t {
   font-family: Arial, sans-serif;
@@ -46,7 +46,7 @@
   line-height: normal;
   position: relative;
   left: 26px;
-  top: 14px;
+  top: 90px;
 }
 .h {
   color: #180354;
@@ -60,8 +60,36 @@
   flex-shrink: 0;
   position: relative;
   left: 26px;
-  top: 104px;
+  top: 180px;
 }
 img {
   border-radius: 30px;
+}
+.cr {
+  width: 141px;
+  height: 22px;
+  flex-shrink: 0;
+  color: #6a6a6a;
+  font-family: Arial, sans-serif;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  position: relative;
+  left: 123px;
+  top: 14px;
+}
+.cr7 {
+  width: 141px;
+  height: 22px;
+  flex-shrink: 0;
+  color: black;
+  font-family: Arial, sans-serif;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  position: relative;
+  left: 123px;
+  top: 4px;
 }
