--- a/src/components/pages/shopping/card.css
+++ b/src/components/pages/shopping/card.css
@@ -6,3 +6,37 @@
   border-radius: 30px;
   background-color: #f3ebeb;
 }
+.rojo {
+  width: 375px;
+  height: 171px;
+  flex-shrink: 0;
+  background: #c12529;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
+}
+.local {
+  width: 128px;
+  height: 17px;
+  flex-shrink: 0;
+  color: #fff;
+  font-family: Arial, sans-serif;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  position: relative;
+  top: -155px;
+  left: 50px;
+}
+.mm {
+  width: 177px;
+  color: #fff;
+  font-family: Actor;
+  font-size: 27px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  position: relative;
+  top: -160px;
+  left: 24px;
+}
