--- a/src/styles/RectanguloV2.css
+++ b/src/styles/RectanguloV2.css
@@ -15,9 +15,9 @@
   border-radius: 5px;
 }
 
-.mujer {
-  width: 25px;
-  height: 25px;
+.estrella {
+  width: 54px;
+  height: 54px;
 }
 .flecha {
   width: 11px;
@@ -33,4 +33,16 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+}
+.letras2 {
+  width: 273px;
+  height: 96px;
+  flex-shrink: 0;
+  color: #fff;
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  display: flex;
 }
