--- a/src/styles/Estrella.css
+++ b/src/styles/Estrella.css
@@ -25,4 +25,36 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  margin: 25px;
+  color: #000;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  margin-top: -250px;
+}
+.total {
+  width: 288px;
+  height: 26px;
+  flex-shrink: 0;
+  color: #000;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+.descripcion {
+  width: 313px;
+  height: 496px;
+  flex-shrink: 0;
+  color: #343434;
+  font-family: Poppins;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin: 0 35px;
+  margin-top: 50px;
 }
