--- a/src/components/pages/shopping/card.css
+++ b/src/components/pages/shopping/card.css
@@ -40,3 +40,19 @@
   top: -160px;
   left: 24px;
 }
+.busqueda {
+  color: #b7b7b7;
+  font-family: Arial, sans-serif;
+  font-size: 10px;
+  font-style: normal;
+
+  width: 246px;
+  height: 37px;
+  flex-shrink: 0;
+  border-radius: 5px;
+  background: #fff;
+  box-shadow: 1px 1px 4px 4px rgba(155, 52, 52, 0.25);
+  position: relative;
+  top: -272px;
+  left: -40px;
+}
