--- a/src/styles/Rectangulo.css
+++ b/src/styles/Rectangulo.css
@@ -13,21 +13,25 @@
   margin: 1px 0;
   width: 150px;
 }
+
 .nombres {
   width: 301px;
   height: 56px;
   flex-shrink: 0;
+  color: #fff;
+  justify-content: space-around;
+  margin: 35px;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
   color: #fff;
   font-family: Actor;
   font-size: 27px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  justify-content: space-around;
-  margin: 35px;
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
+  margin-top: -10px;
+  margin-left: 28px;
 }
 .nombres2 {
   width: 301px;
@@ -44,6 +48,8 @@
   display: flex;
   flex-direction: column;
   align-items: stretch;
+  margin-top: -60px;
+  margin-left: 28px;
 }
 .pais {
   width: 128px;
@@ -60,6 +66,23 @@
 .icono {
   width: 20px;
   height: 20px;
+  display: flex;
+  margin-top: 10px;
+  margin-left: 28px;
+}
+.lapazbo {
+  display: flex;
+  margin-top: 20px;
+  margin-left: 10px;
+  width: 128px;
+  height: 17px;
+  flex-shrink: 0;
+  color: #fff;
+  font-family: Poppins;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
 }
 .messi {
   width: 100px;
