--- a/src/components/incomeData/incomeD.css
+++ b/src/components/incomeData/incomeD.css
@@ -1,17 +1,16 @@
-.buscador {
+.incomeD {
   width: 261px;
   height: 37px;
   border-radius: 5px;
+  border-radius: 10px;
+  border: 1px solid #000;
   background-color: rgba(255, 255, 255, 1);
-  box-shadow: 1px 1px 4px 4px rgba(155, 52, 52, 0.25);
 }
 
 .letras {
-  position: absolute;
+  position: relative;
   width: 132.43px;
   height: 13px;
-  top: 13px;
-  left: 36.43px;
   font-family: Poppins;
   font-size: 10px;
   font-weight: 300;
