--- a/src/views/view2/view2.css
+++ b/src/views/view2/view2.css
@@ -13,7 +13,7 @@
 }
 .containerButtons2 {
   position: relative;
-  top: 190px;
+  top: 110px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -21,9 +21,36 @@
   gap: 10px;
 }
 
-.element.Style {
-  font-size: 16px;
-  font-family: Poppins;
-  color: aqua;
-  background-color: blue;
+.Dingreso {
+  position: relative;
+  top: 0px;
+  left: -5px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.arriba {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  position: absolute;
+  width: 240px;
+  height: 50px;
+  top: 20px;
+  left: 20px;
+  margin-left: 0px;
+  margin-right: 0px;
+  flex-direction: row-reverse;
+  align-items: flex-end;
+}
+
+.tittle2 {
+  width: 226px;
+  height: 56px;
+  position: relative;
+  top: -300px;
+  left: -20px;
 }
