--- a/src/components/incomeData/incomeD.css
+++ b/src/components/incomeData/incomeD.css
@@ -9,8 +9,10 @@
 
 .letras {
   position: relative;
-  width: 132.43px;
+  width: 160px;
   height: 13px;
+  top: 12px;
+  left: 16px;
   font-family: Poppins;
   font-size: 10px;
   font-weight: 300;
