--- a/src/components/tittle/tittle.css
+++ b/src/components/tittle/tittle.css
@@ -9,3 +9,14 @@
   position: relative;
   top: -290px;
 }
+.titulo{
+  color: #fff;
+  text-align: center;
+  font-family: Kaushan Script;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  position: relative;
+  top: -290px;
+}
