--- a/src/views/home/home.css
+++ b/src/views/home/home.css
@@ -16,8 +16,37 @@
   width: 375px;
   height: 171px;
   flex-shrink: 0;
-  background: #C02428;
+  background: #c02428;
   position: absolute;
   top: 0px;
   border-radius: 30px 30px 0 0;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.busqueda {
+  position: relative;
+  display: flex;
+  top: 68px;
+  left: 10px;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: space-around;
+  margin-right: 32px;
+}
+.categorias {
+  width: 345px;
+  height: 30px;
+  flex-shrink: 0;
+  position: relative;
+  top: -140px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: nowrap;
 }
