--- a/src/views/home/home.css
+++ b/src/views/home/home.css
@@ -7,9 +7,10 @@
   justify-content: center;
   align-items: center;
   border-radius: 30px;
-  background: #fff;
+  background-color: rgb(255, 255, 255);
   width: 375px;
   height: 812px;
+  overflow: hidden;
 }
 
 .inicio {
@@ -43,10 +44,27 @@
   height: 30px;
   flex-shrink: 0;
   position: relative;
-  top: -140px;
+  top: 180px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   flex-wrap: nowrap;
+}
+
+.DisProducts {
+  display: flex;
+  gap: 30px;
+  flex-wrap: wrap;
+  flex-direction: row;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  position: relative;
+  top: 190px;
+  display: flex;
+  width: 290px;
+  height: 620px;
+  padding-bottom: 0px;
 }
