--- a/src/views/producto/producto.css
+++ b/src/views/producto/producto.css
@@ -63,6 +63,9 @@ line-height: normal;
 height: 20px;
 flex-shrink: 0;
 background: url(star.png), lightgray 50% / cover no-repeat;
+position: relative;
+right: 120px;
+top: -60px;
 }
 .disp{
     color: #000;
@@ -74,5 +77,19 @@ line-height: normal;
 position: relative;
 top: -10px;
 right: 10px;
+}
+.calificacion{
+    width: 31px;
+height: 15px;
+flex-shrink: 0;
+color: #5C5C5C;
+font-family: Poppins;
+font-size: 12px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+position: relative;
+right: 90px;
+top: -90px;
 }
   
