--- a/src/views/producto/producto.css
+++ b/src/views/producto/producto.css
@@ -40,7 +40,7 @@ font-style: normal;
 font-weight: 400;
 line-height: normal;
 position: relative;
-top: 10px;
+top: 70px;
 }
 .boton{
     border-radius: 127px;
@@ -65,7 +65,7 @@ flex-shrink: 0;
 background: url(star.png), lightgray 50% / cover no-repeat;
 position: relative;
 right: 120px;
-top: -60px;
+top: -99px;
 }
 .disp{
     color: #000;
@@ -75,7 +75,7 @@ font-style: normal;
 font-weight: 500;
 line-height: normal;
 position: relative;
-top: -10px;
+top: 40px;
 right: 10px;
 }
 .calificacion{
@@ -90,6 +90,59 @@ font-weight: 400;
 line-height: normal;
 position: relative;
 right: 90px;
-top: -90px;
+top: -130px;
 }
-  
+.vector1{
+    width: 10.97px;
+height: 17px;
+flex-shrink: 0;
+fill: #000;
+position: relative;
+left: 15px;
+}
+.vector2{
+    width: 10.97px;
+height: 17px;
+flex-shrink: 0;
+fill: #000;
+position: relative;
+right: 15px;
+}
+.boton10{
+    border-radius: 87px;
+border: 1px solid #BFBFBF;
+background: #FFF;
+    display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100px;
+height: 45px;
+flex-shrink: 0;
+position: relative;
+top: 40px;
+right: 100px;
+}
+.price{
+    width: 57px;
+height: 27px;
+flex-shrink: 0;
+border-radius: 31px;
+border: 1px solid #D9D9D9;
+background: linear-gradient(0deg, rgba(0, 0, 0, 0.20) 0%, rgba(0, 0, 0, 0.20) 100%), #FFF;
+position: relative;
+left: 110px;
+}
+.bs{
+    width: 103px;
+height: 19px;
+flex-shrink: 0;
+color: #000;
+font-family: Poppins;
+font-size: 15px;
+font-style: normal;
+font-weight: 800;
+line-height: normal;
+position: relative;
+top: -10px;
+right: 25px;
+}
